--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 .externalNativeBuild
 .cxx
 local.properties
+app/google-services.json
+.idea/deploymentTargetDropDown.xml
+.idea/misc.xml
+.idea/misc.xml
